2006-08-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c:
	    Use long instead of int to bind Fixnum.
	* lib/oci8.rb.in: add a workaround code on cygwin version.
	    Cygwin manages environment variables by itself. They don't
	    synchroize with Win32's ones. set some Oracle's environment
	    variables to win32.

2006-08-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add a workaround code on cygwin version.
	    Cygwin manages environment variables by itself. They don't
	    synchroize with Win32's ones. set some Oracle's environment
	    variables to win32.

2006-07-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: add OraDate#dup, OraDate#clone, OraDate#_dump
	    and OraDate._load.
	* ext/oci8/oranumber.c: add OraNumber#dup, OraNumber#clone,
	    OraNumber#_dump and OraNumber._load.
	* ext/oci8/rowid.c: add OCIRowid#dup, OCIRowid#clone.
	    These methods raise an error when using Oracle 8.x.
	* test/test_oradate.rb: add tests for OraDate#dup, OraDate#clone,
	    OraDate#_dump and OraDate._load.
	* test/test_oranumber.rb: add tests for OraNumber#dup,
	    OraNumber#clone, OraNumber#_dump and OraNumber._load.

2006-07-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c, lib/oci8/metadata.rb: add a type_metadata method
	    to OCI8::Metadata::Table, OCI8::Metadata::View, OCI8::Metadata::TypeAttr,
	    OCI8::Metadata::Collection, OCI8::Metadata::Column, OCI8::Metadata::Argument
	    OCI8::Metadata::TypeArgument and OCI8::Metadata::TypeResult.

2006-07-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c,
	    lib/oci8/oci8.rb: Support LONG and LONG RAW longer than 65535 bytes.
	    Add OCI8#long_read_len and OCI8#long_read_len= to set max long
	    length.
	* ext/oci8/oraconf.rb: fix typo.

2006-07-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/rowid.c, ext/oci8/oci8lib.c: change
	    Rowid's internal structure when OCIRowidToChar is available.